# ChangeLog for sci-chemistry/chemBuild
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Jan 2014; Justin Lecher <jlec@gentoo.org> chemBuild-1.0.3.ebuild:
  Fix double prefix

*chemBuild-1.0.3 (07 Aug 2013)

  07 Aug 2013; Justin Lecher <jlec@gentoo.org> +chemBuild-1.0.3.ebuild:
  Version Bump

  16 Jun 2013; Justin Lecher <jlec@gentoo.org> chemBuild-1.0.2.ebuild,
  files/chemBuild, metadata.xml:
  Bump EAPI and python eclass

  21 Sep 2012; Justin Lecher <jlec@gentoo.org> chemBuild-1.0.2.ebuild:
  Needs webkit support in pyside

*chemBuild-1.0.2 (21 Sep 2012)

  21 Sep 2012; Justin Lecher <jlec@gentoo.org> +chemBuild-1.0.2.ebuild,
  +files/chemBuild, +metadata.xml:
  New addition
