@@ -1,2 +1,3 @@
 DIST chemBuild1.0.2_WithApi.tar.gz 15593107 SHA256 f27c5f7c5e557af2cbe1ccdacff6e0896ab041536d127733478d27a963bf2f2c SHA512 85cc5d83c63b230c889bbdeed560ac7043db477d7f1a54e42cc85d6b18733b0279e6de0d3e3f1e3b30eb99f450a236a673eb3202d4e0942a20e857ec285df037 WHIRLPOOL ab8f51284056921cb4eb1cf812cd715036ba38547bb1931e187430b5dd2b01315bfebe12a6ef8de9d57fc6c54acb095dbdef53d60eae86d2f116861ed4f5600c
 DIST chemBuild1.0.3_WithApi.tar.gz 15626451 SHA256 aba90084efc9d66f45a3a0f4f1716941ee9f957d2ee4bda54e3c25e758a16dda SHA512 a087af3d57513b6a14c7b45db5d0f071a632260bc2ffd3e6b509afb5fcc830f00ecc7234f13b9e60b60600f1be211f3a3d34deb0b6ab0287b076cfadacc336c2 WHIRLPOOL 4fe77a90f9a07fd5c3cf130e6210df69413040a716ea90aab09e4099b44efd9b4f1c609356da9123c104fb5003683aecc87accd4677ce58ff60add999d122853
+DIST chemBuild1.0.4_WithApi.tar.gz 15818720 SHA256 678229e037817dfce608bfce895330ecd3938cf591c806530f89ade3cde770a2 SHA512 7b351436db6a9856a4a41bf91ec2c1ccd566e0dbff169f28c76ed209d875340c16ed18af236676b47bd6e526abd0bdaa29068f7f7f27204bf2239ea528d7a002 WHIRLPOOL 6697f14b9cf83a4404d54d1943ec64594dffdd64de1e26e0e81853b892c123008f9beaf7478390b3adbb17cfccf9dd5795d70b62df9b980d5c971b08b1cadaee
